--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -31,5 +31,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Logout" />
+
+        <ListView
+            android:id="@+id/ListaUsuarios"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
