--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ProfileActivity"
-    tools:showIn="@layout/activity_profile">
+    tools:showIn="@layout/activity_chat">
 
     <LinearLayout
         android:layout_width="395dp"
@@ -33,7 +33,7 @@
 
         <ListView
             android:id="@+id/ListaUsuarios"
-            android:layout_width="match_parent"
+            android:layout_width="390dp"
             android:layout_height="233dp"
             android:layout_gravity="center_horizontal" />
 
