--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,17 +7,45 @@
     android:background="@color/colorAccent"
     tools:context=".ProfileActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            android:id="@+id/main_page_toolbar"
+            layout="@layout/app_bar_layout"
+            >
+        </include>
 
-    <include
-        android:id="@+id/main_page_toolbar"
-        layout="@layout/app_bar_layout"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/main_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+
+        </android.support.design.widget.TabLayout>
+
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_tabs_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appBarLayout">
+
+    </android.support.v4.view.ViewPager>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="553dp"
-        android:layout_below="@+id/main_page_toolbar"
+        android:layout_below="@+id/appBarLayout"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="124dp">
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="46dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
