--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,19 +20,19 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/login_image"
+                android:id="@+id/register_image"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="fitCenter"
-                android:src="@drawable/login_photo" />
+                android:src="@drawable/signup_photo" />
 
             <EditText
-                android:id="@+id/login_email"
+                android:id="@+id/register_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/login_image"
+                android:layout_below="@+id/register_image"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="17dp"
                 android:layout_marginTop="25dp"
@@ -44,10 +44,10 @@
                 android:padding="4dp" />
 
             <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/register_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/login_email"
+            android:layout_below="@+id/register_email"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="17dp"
             android:layout_marginTop="25dp"
@@ -58,42 +58,87 @@
             android:inputType="textPassword"
             android:padding="4dp" />
 
-            <TextView
-                android:id="@+id/forget_password_link"
+            <EditText
+                android:id="@+id/register_nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/login_password"
-                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/register_password"
                 android:layout_alignParentStart="true"
-                android:text="Forget Password?"
                 android:layout_marginLeft="17dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="23dp"
-                android:textSize="17dp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
-                android:textAlignment="textEnd"/>
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="17dp"
+                android:background="@drawable/inputs"
+                android:hint="Nombre..."
+                android:inputType="textPassword"
+                android:padding="4dp" />
+
+            <EditText
+                android:id="@+id/register_apellidos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/register_nombre"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="17dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="17dp"
+                android:background="@drawable/inputs"
+                android:hint="Apellidos..."
+                android:inputType="textPassword"
+                android:padding="4dp" />
+
+            <EditText
+                android:id="@+id/register_telefono"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/register_apellidos"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="17dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginRight="17dp"
+                android:background="@drawable/inputs"
+                android:hint="Telefono..."
+                android:inputType="textPassword"
+                android:padding="4dp" />
+
 
             <Button
-                android:id="@+id/login_button"
+                android:id="@+id/register_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/forget_password_link"
+                android:layout_below="@+id/register_telefono"
                 android:padding="4dp"
                 android:layout_marginLeft="19dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="19dp"
-                android:text="Login"
+                android:text="Create Account"
                 android:textAllCaps="false"
                 android:textSize="24sp"
                 android:textColor="@android:color/background_light"
                 android:background="@drawable/buttons"
                 />
 
+            <TextView
+                android:id="@+id/already_account_link"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/register_button"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentStart="true"
+                android:text="Already have an Account?"
+                android:layout_marginLeft="17dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="23dp"
+                android:textSize="17dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textAlignment="center"/>
+
+
+
         </RelativeLayout>
     </ScrollView>
 
-    <include layout="@layout/content_register" />
+
 
 
 </RelativeLayout>
