Corregido fallo inicial

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,7 +69,7 @@
                 android:layout_marginRight="17dp"
                 android:background="@drawable/inputs"
                 android:hint="Nombre..."
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:padding="4dp" />
 
             <EditText
@@ -83,7 +83,7 @@
                 android:layout_marginRight="17dp"
                 android:background="@drawable/inputs"
                 android:hint="Apellidos..."
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:padding="4dp" />
 
             <EditText
@@ -97,7 +97,7 @@
                 android:layout_marginRight="17dp"
                 android:background="@drawable/inputs"
                 android:hint="Telefono..."
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:padding="4dp" />
 
 
