--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ChatActivity"
-    tools:showIn="@layout/activity_chat">
+    tools:showIn="@layout/activity_chat2">
 
     <TextView
         android:id="@+id/nameGroup"
@@ -33,44 +34,67 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="102dp"
+        android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/listMessage"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="171dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="98dp"
+        android:layout_marginTop="27dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/inputs"
         android:ems="10"
+        android:hint="Escribe lo que quieras"
         android:inputType="textPersonName"
         android:padding="4dp" />
 
     <Button
         android:id="@+id/sendbutton"
-        android:layout_width="44dp"
-        android:layout_height="33dp"
+        android:layout_width="77dp"
+        android:layout_height="35dp"
         android:layout_below="@+id/listMessage"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
         android:layout_marginLeft="19dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="19dp"
-        android:layout_toEndOf="@+id/editText"
         android:text="OK" />
 
-    <ImageButton
-        android:id="@+id/ImageButton01"
-        android:layout_width="65dp"
-        android:layout_height="38dp"
-        android:layout_below="@+id/listMessage"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginTop="7dp"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/right_labels"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/listMessage"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginBottom="-588dp"
+        fab:fab_addButtonColorNormal="@color/white"
+        fab:fab_addButtonColorPressed="@color/white_pressed"
+        fab:fab_addButtonPlusIconColor="@color/half_black"
+        fab:fab_addButtonSize="mini"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        fab:fab_labelsPosition="right">
 
-        android:layout_marginEnd="310dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/buttons"
-        android:src="@drawable/camera2" />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addPhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/white_pressed"
+            fab:fab_title="Label on the right" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addUbication"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/white_pressed"
+            fab:fab_size="mini"
+            fab:fab_title="Another one on the right" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+
+
 </RelativeLayout>
