Añadido contactos y chat con ellos

--- a/app/src/main/res/menu/main_profile.xml
+++ b/app/src/main/res/menu/main_profile.xml
@@ -14,10 +14,15 @@
         app:showAsAction="never" />
 
     <item
-    android:id="@+id/app_bar_search"
+    android:id="@+id/app_contacts"
     android:icon="@drawable/ic_search_black_24dp"
-    android:title="Search group"
+    android:title="Contactos"
     app:actionViewClass="android.widget.SearchView" />
+    <item
+        android:id="@+id/app_profile"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Grupos"
+        app:actionViewClass="android.widget.SearchView" />
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="400"
