--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,16 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/fotoPerfil"
-            android:layout_width="48sp"
-            android:layout_height="48sp"
-            android:src="@mipmap/ic_launcher" />
         <TextView
             android:id="@+id/nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kevin"
+            android:text=""
             android:layout_gravity="center"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
