--- a/app/src/main/res/menu/main_profile.xml
+++ b/app/src/main/res/menu/main_profile.xml
@@ -24,6 +24,12 @@
         android:title="Grupos"
         app:actionViewClass="android.widget.SearchView" />
     <item
+        android:id="@+id/action_birthday"
+        android:orderInCategory="400"
+        android:title="Cumpleaños"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="400"
         android:title="Logout"
