--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -31,21 +31,21 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_tabs_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/appBarLayout">
 
-    </android.support.v4.view.ViewPager>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="553dp"
         android:layout_below="@+id/appBarLayout"
+        android:layout_alignStart="@+id/main_tabs_pager"
+
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="26dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="46dp">
+
 
         <RelativeLayout
             android:layout_width="match_parent"
